Potential fix for new dashboard panel not showing in safari.

--- a/metrilyx/static/css/style.css
+++ b/metrilyx/static/css/style.css
@@ -214,7 +214,7 @@ input.codeline {
 	padding:0;
 	width: 23.5%;
 	color: #ccc;
-	overflow-y: hidden;
+	/*overflow-y: hidden;*/
 	z-index: 1000;
 }
 #side-panel.offstage,
